<?xml version="1.0" encoding="utf-8"?>
<!--
 The MIT License (MIT)
 Copyright (c) 2017 Shopify

 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:

 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
 MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
 IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
 DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
 OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
 OR OTHER DEALINGS IN THE SOFTWARE.
-->
<resources>
    <string name="confirmation_title">Order Confirmation</string>
    <string name="confirmation_summary_subtotal">Subtotal</string>
    <string name="confirmation_summary_shipping">Shipping</string>
    <string name="confirmation_summary_tax">Tax</string>
    <string name="confirmation_summary_total">Total: %1$s</string>
    <string name="confirmation_shipping_method_title">Shipping Method</string>
    <string name="confirmation_shipping_method_change">CHANGE</string>
    <string name="confirmation_shipping_method_not_selected">Not Selected</string>
    <string name="confirmation_shipping_method_price_not_available">N/A</string>
    <string name="confirmation_shipping_method_select_title">Select Shipping Method</string>
    <string name="confirmation_confirm">Confirm Order</string>
    <string name="confirmation_address_error">We\'ve encountered an error while updating your shipping address. Please try again.</string>
    <string name="confirmation_method_error">We\'ve encountered an error while updating your shipping method. Please try again.</string>
</resources>
