<?xml version="1.0" encoding="utf-8"?>
<!--
 The MIT License (MIT)
 Copyright (c) 2017 Shopify

 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:

 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
 MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
 IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
 DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
 OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
 OR OTHER DEALINGS IN THE SOFTWARE.
-->
<com.shopify.unity.buy.androidpay.view.widget.TotalSummaryView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/default_padding"
    android:paddingEnd="@dimen/default_padding"
    android:paddingStart="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding">

    <TextView
        android:id="@+id/subtotal_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_summary_subtotal"
        android:textAppearance="@style/Shopify.SubTitleText.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shipping_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_half"
        android:text="@string/confirmation_summary_shipping"
        android:textAppearance="@style/Shopify.SubTitleText"
        android:textColor="@color/text_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_title" />

    <TextView
        android:id="@+id/tax_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_half"
        android:text="@string/confirmation_summary_tax"
        android:textAppearance="@style/Shopify.SubTitleText"
        android:textColor="@color/text_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipping_title" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="end"
        android:lines="1"
        android:textAppearance="@style/Shopify.SubTitleText.Inverse"
        app:layout_constraintLeft_toRightOf="@+id/subtotal_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="$1.00" />

    <TextView
        android:id="@+id/shipping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_half"
        android:ellipsize="end"
        android:gravity="end"
        android:lines="1"
        android:textAppearance="@style/Shopify.SubTitleText"
        android:textColor="@color/text_grey"
        app:layout_constraintLeft_toRightOf="@+id/shipping_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal"
        tools:text="$12.00" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_half"
        android:ellipsize="end"
        android:gravity="end"
        android:lines="1"
        android:textAppearance="@style/Shopify.SubTitleText"
        android:textColor="@color/text_grey"
        app:layout_constraintLeft_toRightOf="@+id/tax_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipping"
        tools:text="$2.00" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/default_padding"
        android:background="?attr/colorAccent"
        app:layout_constraintLeft_toLeftOf="@+id/total"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tax" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding_half"
        android:layout_marginTop="@dimen/default_padding_half"
        android:ellipsize="end"
        android:gravity="end"
        android:lines="1"
        android:textAppearance="@style/Shopify.TitleText.Inverse"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="Total: $20.00" />

</com.shopify.unity.buy.androidpay.view.widget.TotalSummaryView>
